Add WBEZ logo and removing some more comment/NPR stuff

--- a/less/app.less
+++ b/less/app.less
@@ -79,7 +79,7 @@ a.btn.btn-blue {
 
 // Navbar
 nav {
-	background-color: #e0e0e0;
+	background-color: #333;
 	height: 46px;
 	overflow: hidden;
 	border-bottom: 2px solid #fff;
@@ -178,6 +178,9 @@ header {
 	}
 }
 
+.wbez-logo svg {
+	margin:10px;
+}
 
 // Cube ad
 .adwrapper { 
