More header/footer styling, including social buttons

--- a/less/app.less
+++ b/less/app.less
@@ -111,20 +111,24 @@ nav {
             position: absolute;
             right: 0;
             top: 0;
-            background-color: white;
+            background-color: #999;
 
             span { margin-right: 20px; }
             a {
                 display: block;
                 height: 44px;
                 width: 44px;
-                text-indent: -999em;
-                background: url(@icon-sprite) no-repeat;
                 &:hover { opacity: .7; }
             }
             li { margin-left: 0; }
-            .facebook a { background-position: 0px -144px; }
-            .twitter a { background-position: 0px -96px; border-right:2px solid white;}
+            .facebook a {  }
+            .twitter a {  }
+            .fa {
+            	font-size:2em;
+            	line-height: 44px;
+            	margin-left:.5em; 
+            	color:white;
+            }
         }
 	}
 
