--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,13 +7,13 @@
     <!-- META TAGS -->
     {% include '_meta.html' %}
 
-    <!-- CHARTBEAT -->
-    <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
-
     <!-- CSS -->
     {{ CSS.push('less/app.less') }}
+    {{ CSS.push('less/timeline.less') }}
+    {{ CSS.push('less/tracker.less') }}
     {% block extra_css %}{% endblock extra_css %}
     {{ CSS.render('css/app.min.css') }}
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lora|Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
 
     {% include '_social_tags.html' %}
 
@@ -45,9 +45,8 @@
         <ul class="site-links">
   
         <ul class="social-links">
-            <li class="twitter"><a rel="external" href="http://twitter.com/share?text={{ COPY.sharing.twitter_text|urlencode }}&amp;url={{ SHARE_URL|urlencode }}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', '{{ PROJECT_SLUG }}', 'tweet', 'nav']);"><i class="fa fa-twitter"></i></a></li>
-            <li class="facebook"><a rel="external" href="https://www.facebook.com/dialog/feed?app_id={{ FACEBOOK_APP_ID }}&amp;link={{ SHARE_URL|urlencode }}&amp;name={{ COPY.sharing.facebook_title|urlencode }}&amp;picture={{ FACEBOOK_IMAGE_URL|urlencode }}&amp;redirect_uri={{ SHARE_URL|urlencode }}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', '{{ PROJECT_SLUG }}', 'facebook', 'nav']);"><i class="fa fa-facebook"></i></a></li>
-
+            <li class="twitter"><a rel="external" href="http://twitter.com/share?text={{ COPY.share.twitter_text|urlencode }}&amp;url={{ COPY.share.share_url|urlencode }}" alt="Share on Twitter" target="_blank" onclick="_gaq.push(['_trackEvent', '{{ PROJECT_SLUG }}', 'tweet', 'nav']);"><i class="fa fa-twitter"></i></a></li>
+            <li class="facebook"><a rel="external" href="https://www.facebook.com/sharer/sharer.php?u={{COPY.share.share_url}}" alt="Share on Facebook" target="_blank" onclick="_gaq.push(['_trackEvent', '{{ PROJECT_SLUG }}', 'facebook', 'nav']);"><i class="fa fa-facebook"></i></a></li>
         </ul>
 
     </nav>
@@ -57,22 +56,14 @@
 
     <section id="content">
         <div class="container">
-            <div class="row">
-                <div id="main-content" class="col-md-8">
-                    {% block content %}
-                    <h1>{{ project_name }}</h1>
-                    App content goes here.
-
-                    <i class="icon icon-play"></i>
-                    {% endblock content %}
-                </div>
-
+            <div class="row">  
+                {% block content %}
+                {% endblock content %}
             </div>
             {% block wide_content %}
             {% endblock wide_content %}
         </div>
     </section>
-
     <footer>
         <div class="primary">
             <ul>
@@ -80,7 +71,7 @@
             </ul>
         </div>
         <div class="secondary">
-            <p>&copy;2014 WBEZ</p>
+            <p>&copy;2015 WBEZ</p>
             <ul>
                 <li id="footerContact"><a href="http://www.wbez.org/contact">Contact</a></li>
                 <li id="footerContact"><a href="https://www.chicagopublicmedia.org/page/privacy-policy">Privacy Policy</a></li>
@@ -106,9 +97,15 @@
     {{ JS.push('js/templates.js') }}
     {{ JS.push('js/comments.js') }}
     {{ JS.push('js/app.js') }}
+    {{ JS.push('js/isotope.pkgd.min.js') }}
+    {{ JS.push('js/imagesloaded.pkgd.min.js') }}
+    {{ JS.push('js/signals.js') }}
+    {{ JS.push('js/hasher.js') }}
+    {{ JS.push('js/rauner.js') }}
     {% block extra_foot_js %}{% endblock extra_foot_js %}
     {{ JS.push('js/analytics.js') }}
     {{ JS.render('js/app-footer.min.js') }}
+    <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     {% block extra_foot %}
     {% endblock extra_foot %}
