--- a/less/tracker.less
+++ b/less/tracker.less
@@ -80,7 +80,7 @@ body:after{
 .headline {
 	padding:5px;	
 	background-image: url(../assets/images/rauner-main.jpg);
-	background-position: center 25%;
+	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment:scroll;
 	-webkit-background-size: cover;
@@ -144,6 +144,10 @@ body:after{
 .topics h2 {
 	font-size:48px;
 	border-bottom:1px solid #333;
+}
+
+.topic-btn {
+	cursor:pointer;
 }
 
 #content {
@@ -249,6 +253,14 @@ nav {
 .btn.tag.active {
 	border: 3px solid #999;
 	opacity:1;
+}
+
+.active .fa-times {
+	display:inline;
+}
+
+.fa-times {
+	display:none;
 }
 
 .tags.active {
